crates/swc_ecma_parser/tests/jsx/errors/nested-fragment-unclosed/input.js.stderr
error: Unexpected eof
 --> $DIR/tests/jsx/errors/nested-fragment-unclosed/input.js:1:9
  |
1 | <><></>
  |         ^

